<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/finished_compose_game_select_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.33"
        android:text="@string/finished_compose_fragment_game_select_button_text"
        android:textSize="@dimen/finished_compose_fragment_game_select_button_text_size"
        android:onClick="goToGameSelectScreen"/>

    <Button
        android:id="@+id/finished_compose_next_player_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.34"
        android:text="@string/finished_compose_fragment_next_player_button_text"
        android:textSize="@dimen/finished_compose_fragment_next_player_button_text_size"
        android:onClick="nextPlayerButton"/>

    <Button
        android:id="@+id/finished_compose_close_app_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.33"
        android:text="@string/finished_compose_fragment_close_app_button_text"
        android:textSize="@dimen/finished_compose_fragment_close_app_button_text_size"
        android:onClick="closeAppButton"/>

</LinearLayout>